# fontra-compile

./: .gitignore  .pre-commit-config.yaml  README.md  fontra_compile.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: python-app.yml  test.yml
scripts/: flatten_var_composites.py  font_stats.py
src/fontra_compile/: __main__.py  _version.py  builder.py  compile_fontc_action.py  compile_fontmake_action.py  compile_varc_action.py  workflow_action.py
tests/: test_compile.py  test_workflow.py
tests/data/: MutatorSans-fontc-static.ttx  MutatorSans-fontc.ttx  MutatorSans-fontmake-cff2.ttx  MutatorSans-fontmake-static-cff.ttx  MutatorSans-fontmake-static.ttx  MutatorSans-fontmake.ttx  MutatorSans-glyf0.ttf.ttx  MutatorSans.otf.ttx  MutatorSans.ttf.ttx  MutatorSans.ttx  MutatorSansAxisValueLabels-fontmake.ttx  figArnaud.otf.ttx  figArnaud.ttf.ttx  figArnaud.ttx  notosanscjksc.otf.ttx
tests/data/MutatorSans.fontra/: font-data.json  glyph-info.csv
tests/data/MutatorSans.fontra/glyphs/: Aacute^1.json  Adieresis^1.json  C^1.json  D^1.json  E^1.json  F^1.json  G^1.json  H^1.json  I.narrow^1.json  IJ^3.json  I^1.json  J.narrow^1.json  J^1.json  K^1.json  L^1.json  M^1.json  N^1.json  O^1.json  P^1.json  Q^1.json  R.alt^1.json  R^1.json  S.closed^1.json  S^1.json  T^1.json  U^1.json  V^1.json  W^1.json  X^1.json  Y^1.json  Z^1.json  acute.json  arrowdown.json  arrowleft.json  arrowright.json  arrowup.json  colon.json  comma.json  dieresis.json  dot.json  (+11 more)
tests/data/MutatorSansAxisValueLabels.fontra/: font-data.json  glyph-info.csv
tests/data/figArnaud.rcjk/: features.fea  fontLib.json
tests/data/figArnaud.rcjk/characterGlyph/: uni0030.glif
tests/data/notosanscjksc.fontra/: font-data.json  glyph-info.csv
tests/data/notosanscjksc.fontra/glyphs/: T_4EBA_2FF1^PP.json  (+10 more)
(+1 files in other folders)
