[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "fontra-compile"
description = "An experimental font compiler for Fontra"
readme = "README.md"
authors = [
    { name = "Just van Rossum", email = "justvanrossum@gmail.com" }
]
keywords = ["font", "fonts"]
license = {text = "GNU General Public License v3"}
dependencies = ["fontra", "fontmake", "fontc", "cffsubr"]
dynamic = ["version"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Environment :: Other Environment",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: JavaScript",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]


[project.scripts]
fontra-compile = "fontra_compile.__main__:main"


[project.entry-points."fontra.workflow.actions"]
compile_varc = "fontra_compile.compile_varc_action"
compile_fontmake = "fontra_compile.compile_fontmake_action"
compile_fontc = "fontra_compile.compile_fontc_action"


[tool.hatch.build.targets.wheel]
packages = ["src/fontra_compile"]


[tool.hatch.version]
source = "vcs"


[tool.hatch.build.hooks.vcs]
version-file = "src/fontra_compile/_version.py"


[tool.pytest.ini_options]
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[[tool.mypy.overrides]]
module = "fontTools.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fontmake.*"
ignore_missing_imports = true
